--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />	
+		<title>Tyler's Website</title>
+
+		<link rel="stylesheet" href="includes/styles.css" type="text/css" media="screen" />
+	</head>
 	<body>
-		<h1>Hello World</h1>
-		<p>This is a temporary test page</p>
+		<div id="header">
+			<h1>Tyler Johnson</h1>
+			<h2>Check out some of my personal projects!</h2>
+		</div>
+		<div id="pages">
+			<div class="pagelink">
+				<a href="FNaFU/index.html">
+					<img src="includes/FNaFU Icon.png"/>
+				</a>
+				<h3>Five Nights at Freddy's faithfully recreated in Unity using assets from the original game</h3>
+			</div>
+			<div class="pagelink">
+				<a href="AutoEmblem/index.html">
+					<img src="includes/Auto Emblem Icon.png"/>
+				</a>
+				<h3>My final project for a college course on gaming and graphics concepts</h3>
+			</div>
+		</div>
 	</body>
 </html>
