Changed FNaFU to link to gamejolt instead

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 		<div id="pages">
 			<div class="pagelink">
-				<a href="FNaFU/index.html">
+				<a href="https://gamejolt.com/games/FNaF-unity/780466">
 					<img src="includes/FNaFU Icon.png"/>
 				</a>
 				<h3>Five Nights at Freddy's faithfully recreated in Unity using assets from the original game</h3>
