Moved auto emblem to its repo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<h3>Five Nights at Freddy's faithfully recreated in Unity using assets from the original game</h3>
 			</div>
 			<div class="pagelink">
-				<a href="AutoEmblem/index.html">
+				<a href="https://tylerbljohnson.github.io/Auto-Emblem">
 					<img src="includes/Auto Emblem Icon.png"/>
 				</a>
 				<h3>My final project for a college course on gaming and graphics concepts</h3>
