--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<a href="https://tylerbljohnson.github.io/Auto-Emblem">
 					<img src="includes/Auto Emblem Icon.png"/>
 				</a>
-				<h3>My final project for a college course on gaming and graphics concepts</h3>
+				<h3>(Link under construction) My final project for a college course on gaming and graphics concepts</h3>
 			</div>
 		</div>
 	</body>
