--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 			<h1>Tyler Johnson</h1>
 			<h2>Check out some of my personal projects!</h2>
 		</div>
-		<div id="pages">
-			<div class="pagelink">
-				<a href="https://gamejolt.com/games/FNaF-unity/780466">
-					<img src="includes/FNaFU Icon.png"/>
-				</a>
-				<h3>Five Nights at Freddy's faithfully recreated in Unity using assets from the original game</h3>
-			</div>
-			<div class="pagelink">
-				<a href="https://tylerbljohnson.github.io/Auto-Emblem">
-					<img src="includes/Auto Emblem Icon.png"/>
-				</a>
-				<h3>(Link under construction) My final project for a college course on gaming and graphics concepts</h3>
+		<div id="pages-container">
+			<div id="pages">
+				<div class="pagelink">
+					<a href="https://gamejolt.com/games/FNaF-unity/780466">
+						<img src="includes/FNaFU Icon.png"/>
+					</a>
+					<h3>Five Nights at Freddy's faithfully recreated in Unity using assets from the original game</h3>
+				</div>
+				<div class="pagelink">
+					<a href="https://tylerbljohnson.github.io/Auto-Emblem">
+						<img src="includes/Auto Emblem Icon.png"/>
+					</a>
+					<h3>My final project for a college course on gaming and graphics concepts</h3>
+				</div>
 			</div>
 		</div>
 	</body>
