--- a/index.html
+++ b/index.html
@@ -10,20 +10,53 @@
 		<div id="background"></div>
 		<div id="header">
 			<h1>Tyler Johnson</h1>
-			<h2>Check out some of my personal projects!</h2>
+			<h2>Check out my stuff!</h2>
 		</div>
-		<div id="pages-container">
-			<div id="pages">
-				<div class="pagelink">
-					<iframe class="dynamicheight" src="https://widgets.gamejolt.com/package/v1?key=65W8TGfU&theme=light" frameborder="0"></iframe>
-					<h3>Five Nights at Freddy's faithfully recreated in Unity using assets from the original game</h3>
+		<div id="container">
+			<div class="navBar nav1">
+				<a href="#about">About me</a>
+			</div>
+			<div id="about" class="content">
+				<div class="top-box left-box text-small text">
+					<img class="picture" src="includes/me.jpg" alt="A picture of me, a handsome and humble guy">
+					<p class="imgTag">Me</p>
 				</div>
-				<div class="pagelink">
-					<a href="https://tylerbljohnson.github.io/Auto-Emblem">
-						<img src="includes/Auto Emblem Icon.png"/>
-					</a>
-					<h3>My final project for a college course on gaming and graphics concepts</h3>
+				<div class="right-box text-small text">
+					<p>I specialize in game development in Unity, though I'm also pretty good at front-end web development; I made this page after all, and I think I did a pretty good job.</p>
+					<br/>
+					<p>You can check out some of the games I've made by heading over to <a class="inline-link" href="#pages">my projects</a>.</p>
+					
 				</div>
+				<div class="bottom-box left-box text-small text">
+					<p>I'm quick to pick up new things. In my free time, I enjoy gaming and watching videos, as well as chatting with my friends online.</p>
+					<br/>
+					<p>I've wanted to get into game development since I was in middle school, and recently I graduated from Camosun College. I'm still looking for a job but I'm keeping my spirits high.</p>
+				</div>
+			</div>
+			<div class="navBar nav2">
+				<a href="#pages">My projects</a>
+			</div>
+			<div id="pages-container" class="content">
+				<div id="pages">
+					<div class="pagelink">
+						<iframe class="dynamicheight" src="https://widgets.gamejolt.com/package/v1?key=65W8TGfU&theme=light" frameborder="0"></iframe>
+						<h3>Five Nights at Freddy's faithfully recreated in Unity using assets from the original game</h3>
+						<a class="repo-link" href="https://github.com/TylerBlJohnson/Five-Nights-Unity">Repo</a>
+					</div>
+					<div class="pagelink">
+						<a href="https://tylerbljohnson.github.io/Auto-Emblem">
+							<img src="includes/Auto Emblem Icon.png"/>
+						</a>
+						<h3>An auto battler loosely based on Pawns of Loki from the game Fire Emblem Heroes</h3>
+						<a class="repo-link" href="https://github.com/TylerBlJohnson/Auto-Emblem">Repo</a>
+					</div>
+				</div>
+			</div>
+			<div id="footer">
+				<p>Hey if you wanna hire me for Unity or web dev stuff shoot me an email&nbsp;</p>
+				<a href="mailto:tylerbljohnson@gmail.com">
+					<p>tylerbljohnson@gmail.com</p>
+				</a>
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
