--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="bottom-box left-box text-small text">
 					<p>I'm quick to pick up new things. In my free time, I enjoy gaming and watching videos, as well as chatting with my friends online.</p>
 					<br/>
-					<p>I've wanted to get into game development since I was in middle school, and recently I graduated from Camosun College. I'm still looking for a job but I'm keeping my spirits high.</p>
+					<p>I've wanted to get into game development since I was in middle school, and recently I graduated from Camosun College. I'm still looking for a job and I'm keeping my spirits high.</p>
 				</div>
 			</div>
 			<div class="navBar nav2">
